# voice-calendar

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tatus
backend/: CMakeLists.txt  README.md  vcpkg.json
backend/migrations/: 001_create_events.sql  002_create_tasks.sql  003_create_categories.sql  004_add_task_scheduling_relation.sql  005_add_event_reminders.sql
backend/src/: main.cpp
backend/src/config/: BackendConfig.cpp  BackendConfig.h
backend/src/controllers/: CategoryController.cpp  CategoryController.h  EventController.cpp  EventController.h  FreeTimeController.cpp  FreeTimeController.h  HealthController.cpp  HealthController.h  ReminderController.cpp  ReminderController.h  SchedulingController.cpp  SchedulingController.h  TaskController.cpp  TaskController.h
backend/src/database/: DatabaseManager.cpp  DatabaseManager.h
backend/src/http/: CategoryJson.cpp  CategoryJson.h  EventJson.cpp  EventJson.h  HttpResponseUtils.cpp  HttpResponseUtils.h  ReminderJson.cpp  ReminderJson.h  TaskJson.cpp  TaskJson.h
backend/src/models/: Category.cpp  Category.h  Event.cpp  Event.h  Reminder.cpp  Reminder.h  Scheduling.h  Task.cpp  Task.h
backend/src/repositories/: CategoryRepository.cpp  CategoryRepository.h  EventRepository.cpp  EventRepository.h  ReminderRepository.cpp  ReminderRepository.h  TaskRepository.cpp  TaskRepository.h
backend/src/services/: EventConflictService.cpp  EventConflictService.h  FreeTimeService.cpp  FreeTimeService.h  ReminderService.cpp  ReminderService.h  ReminderStreamService.cpp  ReminderStreamService.h  TaskSchedulerService.cpp  TaskSchedulerService.h
backend/src/utils/: DateTimeUtils.cpp  DateTimeUtils.h  ReminderDateTime.cpp  ReminderDateTime.h
backend/tests/: BackendConfigTests.cpp  ReminderDateTimeTests.cpp
scripts/: test-backend-infrastructure.mjs  test-category-migration-integration.mjs  test-category-migration.mjs  test-event-migration-integration.mjs  test-event-migration.mjs  test-event-reminder-config.mjs  test-event-reminder-integration.mjs  test-task-migration-integration.mjs  test-task-migration.mjs
src/: App.css  App.tsx  index.css
src/api/: categoryApi.ts  eventApi.ts  reminderApi.ts  schedulingApi.ts  taskApi.ts
src/components/: AmbientBackground.tsx  CalendarView.tsx  CategoryPanel.tsx  CompletionFeedbackModal.tsx  CountdownBubbleLayer.tsx  CountdownPanel.tsx  DayDetail.tsx  DayDetailModal.tsx  ReminderToast.tsx  TimeBlockPlanner.tsx  (+1 more)
(+42 files in other folders)
